# orgb

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: angletransformer.h  image_loader.h  lcc.h  orgbconverter.h
src/: image_loader.cpp  lcc.cpp  orgbconverter.cpp
